# iot-api-banap

./: README.md  bootstrap.py  main.py  pyproject.toml  requirements.txt
src/__seedwork/Application/: nullary.py  usecase.py
src/__seedwork/Domain/: entity.py
src/__seedwork/Domain/Exceptions/: domain_exception.py
src/__seedwork/Infrastructure/Database/: Connection.py
src/__seedwork/Infrastructure/Http/: request.py  response.py  router.py
src/esp_iot/Application/: usecases.py
src/esp_iot/Application/Adapters/: data_repository.py
src/esp_iot/Domain/: entities.py
src/esp_iot/Infrastructure/Adapters/: request_adapter.py  response_adapter.py
src/esp_iot/Infrastructure/Database/: MongoConnection.py
src/esp_iot/Infrastructure/Factories/: CreateNewDataOfEspFactory.py  GetByDateDataOfEspFactory.py  GetLastDataOfEspFactory.py
src/esp_iot/Infrastructure/Http/: router.py
src/esp_iot/Infrastructure/Http/Api/: CreateNewDataOfEspController.py  GetByDateDataOfEspController.py  GetLastDataOfEspController.py
src/esp_iot/Infrastructure/Models/: DataOfEspModelAlchemy.py
src/esp_iot/Infrastructure/Repositories/: DataOfEspRepository.py
