[project]
name = "iot-api-banap"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Asher", email = "asherndebortoli@gmail.com"},
]
dependencies = [
    "SQLAlchemy>=2.0.36",
    "python-dotenv>=1.0.1",
    "Flask>=3.0.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
